--- a/test_frameworks/jasmine/runner.html
+++ b/test_frameworks/jasmine/runner.html
@@ -5,6 +5,7 @@
   <title>Test'em</title>
   <script src="/testem/jasmine/jasmine.js"></script>
   <script src="/testem.js"></script>
+  <script src="/testem/jasmine/adapter.js"></script>
   <script src="/testem/jasmine/jasmine-html.js"></script>
   <script>
     (function() {
@@ -17,11 +18,9 @@
     })();
   </script>
 
-  {{#scripts}}<script src="{{src}}"{{#attrs}} {{&.}} {{/attrs}}></script>{{/scripts}}
-
+  
   <link rel="stylesheet" href="/testem/jasmine/jasmine.css">
 
-  {{#styles}}<link rel="stylesheet" href="{{.}}">{{/styles}}
 </head>
 <body>
   <div id="jasmine_content"></div>
